--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
-- import_tasks: docker_installer_{{ install_or_uninstall }}.yml
-  tags: docker_installer
+- import_tasks: docker_{{ install_or_uninstall }}.yml
+  tags: docker
