--- a/roles/px-enterprise/tasks/px-enterprise_uninstall.yml
+++ b/roles/px-enterprise/tasks/px-enterprise_uninstall.yml
@@ -7,8 +7,9 @@
   ignore_errors: true
 
 - name: filter mount point
-  shell: df | awk 'NR>1{print $NF}' | sort -r
+  shell: df | awk 'NR>1{print $NF}' | sort -r |grep -E -v '^/sys/fs/cgroup$|^/run$|^/dev$|^/$'
   register: df_result
+  ignore_errors: true
 
 - set_fact: DF_RESULT={{ df_result.stdout.split() }}
 - name: unmount
