--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 # https://raw.githubusercontent.com/ansible/ansible/devel/examples/ansible.cfg
 [defaults]
-gather_facts = True
+gather_facts = False
 gathering = smart
 host_key_checking = False
