--- a/roles/docker/tasks/docker_install.yml
+++ b/roles/docker/tasks/docker_install.yml
@@ -1,5 +1,6 @@
 - include_tasks: offline_yum_repo.yml
 - include_tasks: ntp.yml
+  tags: ntp
 - name: yum.conf skip_broken=1, obsoletes=0
   ini_file:
     path: /etc/yum.conf
