--- a/roles/common/tasks/ntp.yml
+++ b/roles/common/tasks/ntp.yml
@@ -1,8 +1,9 @@
 ---
 - name: install chrony
   yum: 
-    name: chrony
+    name: chrony 
     state: present
+    update_cache: yes
 
 - name: configure chrony 
   template: 
