--- a/roles/common/tasks/common_uninstall.yml
+++ b/roles/common/tasks/common_uninstall.yml
@@ -15,3 +15,11 @@
   user:
     name: chrony
     state: absent
+
+- name: clear 
+  file:
+    path: "{{ item }}"
+    state: absent
+  with_items:
+    - /etc/yum.repos.d/dce_offline.repo
+    - /etc/yum.repos.d/centos7_base_repo.repo
